Fix CSS version tag in static HTML

--- a/pages/etudiant/messages.html
+++ b/pages/etudiant/messages.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../../css/main.css" />
   <!-- Force refresh with timestamp -->
-  <link rel="stylesheet" href="../../css/messenger-style.css?v=<?php echo time(); ?>" />
+  <link rel="stylesheet" href="../../css/messenger-style.css?v=8.0" />
   <script src="https://unpkg.com/lucide@latest"></script>
   <style>
     body {
