Force cache bust v9.9 for student messages CSS/JS

--- a/pages/etudiant/messages.html
+++ b/pages/etudiant/messages.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../../css/main.css" />
   <!-- Force refresh with timestamp -->
-  <link rel="stylesheet" href="../../css/messenger-style.css?v=8.0" />
+  <link rel="stylesheet" href="../../css/messenger-style.css?v=9.9" />
   <script src="https://unpkg.com/lucide@latest"></script>
   <style>
     body {
@@ -124,7 +124,7 @@
 
   <script src="../../js/core/data-manager.js"></script>
   <script src="../../js/components/sidebar-etudiant.js?v=fresh"></script>
-  <script src="../../js/pages/student-messages.js?v=fresh2"></script>
+  <script src="../../js/pages/student-messages.js?v=9.9"></script>
   <script>
     lucide.createIcons();
     function toggleSidebar() {
